@startuml

class FabriqueClasse {
    + creerVue(File): Pane
}

class VueClasse {
    + afficher(definition: String): void
    + getView(): Pane
}

class VueAttribut {
    + afficher(field: Field): void
    + getView(): Pane
}

class VueInterface {
    + afficher(definition: String): void
    + getView(): Pane
}

class VueMethode {
    + afficher(method: Method): void
    + getView(): Pane
}

FabriqueClasse --> VueClasse
FabriqueClasse --> VueAttribut
FabriqueClasse --> VueInterface
FabriqueClasse --> VueMethode

@enduml
